  - To reopen a group use the "Open Saved Session or groups" toolbar button or Session menu.
  - Note: The "Save/manage group of saved Session" dialog offers an optimization
    which allows to save all open Sessions by using the ctrl+alt+shift+m shortcut to open the dialog
    and then hitting enter to save or GIT commit.

SQL editor's right mouse menu offers to execute SQLs.

Bug fixes:

Look and feel plugin: When SQuirreL was installed into an empty directory
  loading the FlatLaf Look and Feel raised a ClassNotFoundException. In consequence SQuirreL's dark theme did not work.
  Additionally FlatLaf was upgraded to version 3.4.1.

Saved Sessions and groups: The "Open / manage ..." dialog's list did not repaint when a Session or group was renamed.

Saved Session groups: Deleting Sessions from groups did not work.
  It now works the same way as when a Saved Session of an open Session is deleted. I.e. all internal files are detached.

Editable cell data popup: When updating data fails with a "No rows updated" message box
  the message box was poorly positioned.

When new users with fresh installations close SQuirreL with an open Session
  they are shown the Session-close confirmation message box.
  If then they check the confirmation message box to be not shown again
  and close the message box by the No-button, SQuirreL lost their "not shown again" choice.


4.7.1 (02/20/2024)
==================

Enhancements:

Alias schema properties: When schemas where filtered by comma separated names
  There are new options to specify if tables, views, procedures, UDTs should be loaded.
  See right mouse click on Alias --> Alias Properties --> tab Schemas
  --> Checkboxes behind radio button "Load schemas filtered by name"

Multiple Alias modification: Added progress dialog and old backups cleanup.

Multiple Alias modification:
   In Aliases view toolbar button or right mouse menu "Modify multiple Aliases".
