@@ -224,7 +224,7 @@ public interface ISession extends IHasIdentifier
     * Changes the title of this session to the new one.
     * @param 	New title of this session.
     */
-   public void setTitle(String newTitle);
+   public void setUserChangedTitle(String newTitle);
    
    /**
     * Add the passed action to the toolbar of the sessions main window.
